--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="img/logo.jpg" type="image/x-icon">
+    <link rel="icon" type="image/jpeg" href="logo.jpg">
     <title>Regalito</title>
 </head>
 <body>
     <div class="greetings">
-    <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
         <span>P</span>
         <span>R</span>
         <span>I</span>
@@ -20,13 +19,10 @@
         <span>S</span>
         <span>A</span>
         <span>♥</span>
-
-
         
     </div>
     <div class="description">
         <span>Esto es para ti, mi vida(D y M)</span>
-        
     </div>
     <div class="button">
         <button>
